# Hide_Geeks

./: CMakeLists.txt  CMakeSettings.json  ImportLibs.cmake  main.cpp  map.h
project/include/: Engine.h  Game.h  Player.h  dude.h  map.h  view.h
project/src/: Draw.cpp  Engine.cpp  Game.cpp  Input.cpp  Player.cpp  dude.cpp  main.cpp  main2.cpp
